# celery-example

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.specify/memory/: constitution.md
api-gateway/: .dockerignore  .env.example  Dockerfile  pyproject.toml
api-gateway/src/api_gateway/: __init__.py  api.py  config.py  errors.py  gateway.py  health.py  log_config.py  main.py  middleware.py  proxy.py  routing.py  schemas.py
celery_example/: __init__.py  main.py  tasks.py  worker.py
common/: Dockerfile  pyproject.toml
common/src/common_tasks/: __init__.py  celery_app.py  schemas.py  tasks.py
example-service-1/: .env.example  Dockerfile  pyproject.toml
example-service-1/src/service1/: __init__.py  api.py  handlers.py  main.py
example-service-2/: .env.example  Dockerfile  pyproject.toml
example-service-2/src/service2/: __init__.py  api.py  handlers.py  main.py
specs/001-microservices-structure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-microservices-structure/checklists/: requirements.md
specs/001-microservices-structure/contracts/: task-contracts.md
specs/002-api-gateway/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-api-gateway/checklists/: requirements.md
specs/002-api-gateway/contracts/: gateway-api.yaml
worker/: .env.example  Dockerfile  pyproject.toml
worker/src/worker/: __init__.py  config.py  main.py
