[project]
name = "celery-example"
version = "0.1.0"
description = "A Python project demonstrating Celery with Redis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
]

[project.scripts]
celery-worker = "celery_example.worker:main"
celery-example = "celery_example.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["celery_example"]
