[project]
name = "api-gateway"
version = "0.1.0"
description = "API Gateway service - single entry point for the microservices architecture"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.25.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_gateway"]
