[project]
name = "example-service-1"
version = "0.1.0"
description = "Example business service 1 (order service) for Celery microservices POC"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.3.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/service1"]